gitmux for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,15 @@
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+
+set -g status-right '%H:%M #(gitmux "#{pane_current_path}")'
+#set -g status-right '%H:%M %d-%b-%y #{=21:pane_title} #(gitmux "#{pane_current_path}")'
+#set -g status-right '#(gitmux "#{pane_current_path}")'
+set -g status-left-length 60
+set -g status-left-length 20
+set -g status-left "[#S] #{=21:pane_title}"
+#set -g status-left "%H:%M %d-%b-%y [#S] \"#{=21:pane_title}\""
+set -g status-style fg=white,bg=blue
 
