--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g status-right '%H:%M #(gitmux "#{pane_current_path}")'
 #set -g status-right '#(gitmux "#{pane_current_path}")'
 set -g status-left-length 60
 set -g status-left-length 20
-set -g status-left "[#S] #{=21:pane_title}"
+set -g status-left "[#S] #{=21:pane_title} "
 #set -g status-left "%H:%M %d-%b-%y [#S] \"#{=21:pane_title}\""
 set -g status-style fg=white,bg=blue
-
+set -g history-limit 50000
