--- a/tmux.conf
+++ b/tmux.conf
@@ -13,3 +13,9 @@ set -g status-left "[#S] #{=21:pane_title} "
 #set -g status-left "%H:%M %d-%b-%y [#S] \"#{=21:pane_title}\""
 set -g status-style fg=white,bg=blue
 set -g history-limit 50000
+
+# split panes using | and -
+#unbind '"'
+#unbind %
+bind | split-window -h
+bind - split-window -v
